--- a/css/initial.css
+++ b/css/initial.css
@@ -3,14 +3,27 @@ body{
     background-size: 100%; 
 }
 
-#sub{
+#challengeSelf{
     position:absolute;
-    background: url(../image/button.png) no-repeat;
+    background: url(../image/challengeSelfButton.png) no-repeat;
     background-size: 100%; 
     vertical-align:middle; 
-    height:11%;
-    width:50%;
-    left:22%;
+    width:49%;
+    height: 10%;
+    left:23%;
     border-width: 0px;
-    top:500px;
+    top:72%;
 }
+
+#challengeFriends{
+    position:absolute;
+    background: url(../image/challengeFriendsButton.png) no-repeat;
+    background-size: 100%; 
+    vertical-align:middle; 
+    width:49%;
+    left:23%;
+    height: 10%;
+    border-width: 0px;
+    top:84%;
+}
+
