--- a/css/initial.css
+++ b/css/initial.css
@@ -1,5 +1,5 @@
 body{
-    background: url(../image/background.jpg);
+    background: url(../image/background.jpg)  no-repeat;
     background-size: 100%; 
 }
 
