--- a/css/recordForShow.css
+++ b/css/recordForShow.css
@@ -37,9 +37,9 @@ body {
 	margin-bottom: 20px;
 }
 
-#success{
+#like{
 	position: absolute;
-	background: url(../image/success.png)  no-repeat;
+	background: url(../image/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
@@ -48,9 +48,9 @@ body {
     border: 0;
 }
 
-#fail{
+#unlike{
 	position: absolute;
-	background: url(../image/fail.png)  no-repeat;
+	background: url(../image/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
@@ -76,25 +76,25 @@ body {
 }
 
 @media screen and (max-device-height: 480px){
-    #success{
+    #like{
 	position: absolute;
-	background: url(../image/success.png)  no-repeat;
+	background: url(../image/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
     top:70%;
-    height:18%;
+    height:19%;
     border: 0;
 }
 
-#fail{
+#unlike{
 	position: absolute;
-	background: url(../image/fail.png)  no-repeat;
+	background: url(../image/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
     top:70%;
-    height:18%;
+    height:19%;
     border: 0;
 }
 }
