--- a/css/record.css
+++ b/css/record.css
@@ -6,7 +6,7 @@ body {
 
 #outline{
 	position: absolute;
-    top:7.4%;
+    top:3%;
     left: 8%;
     width:84%;
     text-align:center;
@@ -34,7 +34,7 @@ body {
 }
 
 #content{
-	margin-bottom: 20px;
+	margin-bottom: 5%;
 }
 
 #success{
@@ -44,7 +44,7 @@ body {
     width: 22%;
     left:8.6%;
     top:60%;
-    height:15.8%;
+    height:16.5%;
     border: 0;
 }
 
@@ -55,7 +55,7 @@ body {
     width: 22%;
     right:8.6%;
     top:60%;
-    height:15.8%;
+    height:16.5%;
     border: 0;
 }
 
@@ -64,7 +64,7 @@ body {
 	background: url(../image/successBG.png)  no-repeat;
     background-size: 100%;
     display: none;
-    z-index: 1000;
+    z-index: 10001;
 }
 
 #resultBg2{
@@ -72,7 +72,119 @@ body {
 	background: url(../image/failBG.png)  no-repeat;
     background-size: 100%;
     display: none;
-    z-index: 1000;
+    z-index: 10001;
+}
+
+#ad{
+    width: 100%;
+    position: absolute;
+    top:100%;
+    background: #14CC74; 
+    height:28px;  
+}
+
+a{
+    font-weight: bold;
+    color: white;
+    float: left;
+    margin: auto;
+}
+
+#comment{
+    border-top: 1px solid #ffca1c;
+    background-color:#c66402; 
+    z-index:10000; 
+    position:absolute; 
+    top:83%;
+    bottom: 100%;
+    width:100%;
+    height:17%;
+    padding: 5%;
+    font-size: 14px;
+    color: white;
+    overflow:scroll;
+}
+
+#commentList{
+    margin-top:10px;
+    padding: 0;
+
+}
+
+.singleComment{
+    list-style-type: none;
+    clear: both;
+}
+
+.smallFace{
+    height: 35px;
+    width: 35px;
+    border-radius: 100px;
+    border: 1px solid #ffca1c;
+    background: url(../image/1.png)  no-repeat;
+    background-size: 100%;
+    margin-right:5%; 
+    float: left;
+}
+
+.smallComment{
+    height:35px;   
+    line-height:35px; 
+    overflow:hidden;     
+    margin:auto 5% auto auto;
+    float: left;
+}
+
+.reply{
+    height:35px;   
+    line-height:35px;   
+    float: left;
+}
+
+#replyLine{
+    background: black;
+    position:absolute; 
+    top:95%;
+    bottom: 100%;
+    width:100%;
+    height:5%;
+    z-index: 10000;
+    padding: 5px;
+    display: none;
+}
+
+#replyLine input{
+    float: left;
+    border-radius: 5px 0 0 5px;
+    width:85%;
+    margin-right:0;
+    border: 0;
+}
+
+#replyBTN{
+    width:15%;
+    border: 0;
+    float:left;
+    margin-left: 0; 
+    background: #ffca1c;
+    border-radius: 0 5px 5px 0;
+}
+
+#back{
+    background: url(../image/back.png)  no-repeat;
+    background-size: 100%;
+    height:30px;
+    width: 98px;
+    border: 0;
+}
+
+#logo{
+    background: url(../image/logo.png)  no-repeat;
+    background-size: 100%;
+    margin-right: 20px;
+    width: 75px;
+    height:26.5px;
+    float: left;
 }
 
 @media screen and (max-device-height: 480px){
