--- a/challenge/public/css/battle.css
+++ b/challenge/public/css/battle.css
@@ -1,17 +1,13 @@
 body {
-	background: url(../image/challengeBG.jpg)  no-repeat;
-	background-size: 100%;
-	font-size: 12px;
+    background: url(../images/challengeBG.jpg)  no-repeat;
+    background-size: 100%;
+    font-family:arial;
 }
 
-textarea{
-	text-indent: 4em;
-}
-
-#form{
-	top:5%;
-}
-
-#challengeGo{
-	font-size:2em;
+#resultBg{
+	position: absolute;
+	background: url(../images/tipBG.png)  no-repeat;
+    background-size: 100%;
+    display: none;
+    z-index: 10001;
 }
