--- a/challenge/public/css/record.css
+++ b/challenge/public/css/record.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../image/recordBG.jpg);
+    background: url(../images/recordBG.jpg);
     background-size: 100%;
     font-size: 16px;
 }
@@ -29,7 +29,7 @@ body {
 
 .secondline{
 	color: #ffca1c;
-	font-size: 1.6em;
+	font-size: 1.4em;
 }
 
 #content{
@@ -42,23 +42,23 @@ body {
 }
 #success{
 	position: absolute;
-	background: url(../image/success.png)  no-repeat;
+	background: url(../images/success.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
     top:60%;
-    height:16.5%;
+    height:20%;
     border: 0;
 }
 
 #fail{
 	position: absolute;
-	background: url(../image/fail.png)  no-repeat;
+	background: url(../images/fail.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
     top:60%;
-    height:16.5%;
+    height:20%;
     border: 0;
 }
 
@@ -66,14 +66,51 @@ body {
     background: #ffca1c;
     border: 2px solid #ac3208;
     border-radius: 5px;
-    width: 60%;
+    width: 80%;
     position: absolute;
     top:80%;
-    left: 20%;
+    left: 10%;
     text-align: center;
     font-size: 1.5em;
     font-weight: bold;
 }
+
+#upload{
+    display: none;
+    background: #ffca1c;
+    border: 2px solid #ac3208;
+    border-radius: 5px;
+    width: 90%;
+    position: absolute;
+    top:80%;
+    left: 5%;
+    text-align: center;
+    font-size: 0.5em;
+    padding: 2%;
+}
+
+#imgurl{
+    float: left;
+    width:85%;
+    margin-right: 5%;
+    background: #ffedad;
+}
+
+#choose{
+    background: #ffca1c;
+    border-radius: 5px;
+    border: 2px solid #ac3208;
+    float: left;
+    width:8%;
+}
+
+#submit{
+    background: #ffca1c;
+    border-radius: 5px;
+    border: 2px solid #ac3208;
+    margin-top: 2%;
+}
+
 
 #currentState{
     color: white;
@@ -83,30 +120,30 @@ body {
 
 #like{
     position: absolute;
-    background: url(../image/like.png)  no-repeat;
+    background: url(../images/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
     top:60%;
-    height:16.5%;
+    height:20%;
     border: 0;
 }
 
 #unlike{
     position: absolute;
-    background: url(../image/unlike.png)  no-repeat;
+    background: url(../images/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
     top:60%;
-    height:16.5%;
+    height:20%;
     border: 0;
 }
 
 
 #resultBg1{
 	position: absolute;
-	background: url(../image/successBG.png)  no-repeat;
+	background: url(../images/successBG.png)  no-repeat;
     background-size: 100%;
     display: none;
     z-index: 10001;
@@ -114,7 +151,7 @@ body {
 
 #resultBg2{
 	position: absolute;
-	background: url(../image/failBG.png)  no-repeat;
+	background: url(../images/failBG.png)  no-repeat;
     background-size: 100%;
     display: none;
     z-index: 10001;
@@ -200,12 +237,14 @@ a{
 #replyLine input{
     float: left;
     border-radius: 5px 0 0 5px;
+    height: 100%;
     width:85%;
     margin-right:0;
     border: 0;
 }
 
 #replyBTN{
+    height: 100%;
     width:15%;
     border: 0;
     float:left;
@@ -215,7 +254,7 @@ a{
 }
 
 #back{
-    background: url(../image/back.png)  no-repeat;
+    background: url(../images/back.png)  no-repeat;
     background-size: 100%;
     height:30px;
     width: 98px;
@@ -223,7 +262,7 @@ a{
 }
 
 #logo{
-    background: url(../image/logo.png)  no-repeat;
+    background: url(../images/logo.png)  no-repeat;
     background-size: 100%;
     margin-right: 20px;
     width: 75px;
@@ -233,30 +272,30 @@ a{
 
 @media screen and (max-device-height: 480px){
     #success{
-       position: absolute;
-       background: url(../image/success.png)  no-repeat;
-       background-size: 100%;
-       width: 22%;
-       left:8.6%;
-       top:70%;
-       height:18%;
-       border: 0;
-   }
+	position: absolute;
+	background: url(../images/success.png)  no-repeat;
+    background-size: 100%;
+    width: 22%;
+    left:8.6%;
+    top:70%;
+    height:18%;
+    border: 0;
+}
 
-   #fail{
-       position: absolute;
-       background: url(../image/fail.png)  no-repeat;
-       background-size: 100%;
-       width: 22%;
-       right:8.6%;
-       top:70%;
-       height:18%;
-       border: 0;
-   }
+#fail{
+	position: absolute;
+	background: url(../images/fail.png)  no-repeat;
+    background-size: 100%;
+    width: 22%;
+    right:8.6%;
+    top:70%;
+    height:18%;
+    border: 0;
+}
 
-   #like{
+#like{
     position: absolute;
-    background: url(../image/like.png)  no-repeat;
+    background: url(../images/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
@@ -267,7 +306,7 @@ a{
 
 #unlike{
     position: absolute;
-    background: url(../image/unlike.png)  no-repeat;
+    background: url(../images/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
@@ -276,4 +315,29 @@ a{
     border: 0;
 }
 
+}
+
+@media (device-height:480px) and (-webkit-min-device-pixel-ratio:2){/* 兼容iphone4/4s */
+    #comment{
+        position: absolute;
+        top:95%;
+    }
+    #upload{
+        position: absolute;
+        top:95%;
+    }
+    #ad{
+        position: absolute;
+        top:112%;
+    }
+    #replyLine{
+        position: absolute;
+        top:105%;
+        bottom: 112%;
+        height:7%;
+    }
+    #state{
+        position: absolute;
+        top:95%;
+    }
 }
