--- a/public/css/battle.css
+++ b/public/css/battle.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../image/challengeBG.jpg)  no-repeat;
+    background: url(../images/challengeBG.jpg)  no-repeat;
     background-size: 100%;
     font-size: 12px;
 }
@@ -14,4 +14,12 @@ textarea{
 
 #challengeGo{
 	font-size:2em;
+}
+
+#resultBg{
+	position: absolute;
+	background: url(../images/tipBG.png)  no-repeat;
+    background-size: 100%;
+    display: none;
+    z-index: 10001;
 }
