--- a/public/css/battleRecordForShow.css
+++ b/public/css/battleRecordForShow.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../image/challengeBG.jpg);
+    background: url(../images/challengeBG.jpg);
     background-size: 100%;
 }
 
