--- a/public/css/recordForShow.css
+++ b/public/css/recordForShow.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../image/recordBG.jpg);
+    background: url(../images/recordBG.jpg);
     background-size: 100%;
     font-size: 16px;
 }
@@ -18,7 +18,6 @@ body {
 	border: 2px solid #ffca1c;
 	height: 50px;
 	width: 50px;
-	background: url(../image/1.png);
     background-size: 100%;
 }
 
@@ -38,7 +37,7 @@ body {
 }
 
 #back{
-    background: url(../image/back.png)  no-repeat;
+    background: url(../images/back.png)  no-repeat;
     background-size: 100%;
     height:30px;
     width: 98px;
@@ -47,7 +46,7 @@ body {
 
 #like{
 	position: absolute;
-	background: url(../image/like.png)  no-repeat;
+	background: url(../images/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
@@ -58,7 +57,7 @@ body {
 
 #unlike{
 	position: absolute;
-	background: url(../image/unlike.png)  no-repeat;
+	background: url(../images/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
@@ -69,7 +68,7 @@ body {
 
 #resultBg1{
 	position: absolute;
-	background: url(../image/successBG.png)  no-repeat;
+	background: url(../images/successBG.png)  no-repeat;
     background-size: 100%;
     display: none;
     z-index: 1000;
@@ -77,7 +76,7 @@ body {
 
 #resultBg2{
 	position: absolute;
-	background: url(../image/failBG.png)  no-repeat;
+	background: url(../images/failBG.png)  no-repeat;
     background-size: 100%;
     display: none;
     z-index: 1000;
@@ -99,7 +98,7 @@ a{
 }
 
 #logo{
-    background: url(../image/logo.png)  no-repeat;
+    background: url(../images/logo.png)  no-repeat;
     background-size: 100%;
     margin-right: 20px;
     width: 75px;
@@ -138,7 +137,6 @@ a{
     width: 35px;
     border-radius: 100px;
     border: 1px solid #ffca1c;
-    background: url(../image/1.png)  no-repeat;
     background-size: 100%;
     margin-right:5%; 
     float: left;
@@ -190,7 +188,7 @@ a{
 @media screen and (max-device-height: 480px){
     #like{
 	position: absolute;
-	background: url(../image/like.png)  no-repeat;
+	background: url(../images/like.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     left:8.6%;
@@ -201,7 +199,7 @@ a{
 
 #unlike{
 	position: absolute;
-	background: url(../image/unlike.png)  no-repeat;
+	background: url(../images/unlike.png)  no-repeat;
     background-size: 100%;
     width: 22%;
     right:8.6%;
